--- a/8. Naive Bayes/Naive Bayes - Mushroom classification.ipynb
+++ b/8. Naive Bayes/Naive Bayes - Mushroom classification.ipynb
@@ -390,10 +390,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8124, 23)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -689,11 +702,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### ..and its works well!\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
