--- a/12. Support Vector Machines/Project_Image_classification/Image Classification.ipynb
+++ b/12. Support Vector Machines/Project_Image_classification/Image Classification.ipynb
@@ -778,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scikit \n",
+    "# SVM using SK-learn \n",
     "\n"
    ]
   },
